# mpLBFGS

./: CMakeLists.txt  LICENSE.md  Makefile  Param.h  README.md  Types.h  example-pframe.cpp  example-quadratic.cpp  parseinput.cpp  pframe.cpp  pframe.h  wtpframe.cpp  wtpframe.h
include/: LBFGS.h  Param.h  wtpframe.h
include/LBFGS/: LineSearch.h  LineSearchMT.h  Param.h
include/linesearch/: LineSearch.h  LineSearchMT.h  descent.h
include/solvers/: LBFGS.h  conjdescent.h  descent.h
linesearch/: LineSearch.h
solvers/: conjdescent.h  descent.h
